# ai-banking-risk-platform

./: .gitignore  CLAUDE.md  README.md  requirements.txt
chapter-01-ai-transformation/: README.md  architecture.mmd  diagram.mmd  requirements.txt
chapter-02-genai-llms/: README.md  architecture.mmd  requirements.txt
chapter-03-ai-agents/: README.md  requirements.txt
chapter-04-rag-systems/: README.md  architecture.mmd  requirements.txt
chapter-05-ai-governance/: README.md  architecture.mmd  conftest.py
chapter-06-credit-risk/: README.md  agentic_cim.py  architecture.mmd  pyproject.toml  requirements.txt
chapter-06-credit-risk/awb_commons/: __init__.py  audit.py  schemas.py
chapter-06-credit-risk/consumer_loan/: decline_letter.py  fairness.py  features.py  scorer.py
chapter-06-credit-risk/corporate_pd/: model.py  rwa_calculator.py  validator.py
chapter-06-credit-risk/exercises/: covenant_alert.py
chapter-06-credit-risk/portfolio/: concentration.py  ews.py
chapter-06-credit-risk/reporting/: cfo_narrative.py  corep_c0700.py
chapter-06-credit-risk/solutions/: covenant_alert_solution.py
chapter-06-credit-risk/tests/: conftest.py  test_consumer_loan.py  test_corporate_pd.py  test_credit_memo_generator.py  test_portfolio.py
chapter-06-credit-risk/underwriting/: __init__.py  credit_memo_generator.py
chapter-07-market-risk/: README.md  agentic_market_risk.py  architecture.mmd  requirements.txt
chapter-08-operational-risk/: README.md  agentic_op_risk.py  architecture.mmd
chapter-09-liquidity-risk/: README.md  agentic_liquidity_risk.py  (+1 more)
docs/: CNAME  (+3 more)
(+255 files in other folders)
