[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "awb-chapter-06"
version = "1.0.0"
description = "AWB Credit Risk AI — Chapter 6 code"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["chapter_06/tests"]
addopts = "-v --tb=short"
markers = [
    "live: tests requiring live API keys (deselect with -m 'not live')",
    "slow: tests taking >5s",
]
